# django-society-elections

./: .gitignore  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py
src/: makemigrations.py  manage.py  urls.py
src/society_elections/: app_settings.py  apps.py  decorators.py  models.py  urls.py  validators.py
src/society_elections/admin/: __init__.py  candidate.py  decorators.py  election.py  electionposition.py  position.py  voter.py
src/society_elections/forms/: __init__.py  candidate.py  election.py  voter.py
src/society_elections/migrations/: 0001_initial.py  0002_auto_20211001_2101.py  0003_candidate_manifesto.py  0004_remove_voter_email_salt.py  0005_auto_20211021_2126.py  0006_auto_20211101_1735.py  0007_auto_20211101_1815.py  0008_auto_20211113_1111.py
src/society_elections/models/: __init__.py  candidate.py  election.py  electionposition.py  position.py  vote.py  voter.py
src/society_elections/templates/society_elections/: election_wrong_period.html
src/society_elections/tests/: __init__.py  helpers.py  views_helper.py  views_vote.py
src/society_elections/views/: __init__.py  decorators.py  election.py  helpers.py  nomination.py  vote.py  voter.py
