[metadata]
name = django-society-elections
version = 0.0.2
description = A Django app to run first-past-the-post elections for a university society
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryanharrison554/django-society-elections
author = Ryan Harrison
author_email = ryanharrison.opensource@protonmail.com
license = GPL
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
python_requires = >=3.6
install_requires =
    Django >= 3.0
packages = find:
package_dir = 
    =src

[options.packages.find]
where = src